<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.AskNameFragment"
    android:background="@color/background_color">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_1_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/player_1_input_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/player_1_name_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:ems="15" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_2_name"
                android:layout_marginTop="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/player_2_input_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/player_2_name_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/name"
                    android:importantForAutofill="no"
                    android:ems="15" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/next_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/start_button_color"
                android:fontFamily="@font/roboto"
                android:textAllCaps="true"
                android:gravity="center"
                android:textColor="@color/white"
                android:padding="16dp"
                android:text="@string/next" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>