<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_dialog_bg"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/o_x_icon_color"
        app:cardCornerRadius="50dp"
        app:cardElevation="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/who_first"
        android:textColor="@color/o_x_icon_color"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/player_x"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            app:cardElevation="0dp"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:paddingVertical="10dp"
                android:src="@drawable/ic_x"
                app:tint="@color/o_x_icon_color" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/player_o"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            app:cardElevation="0dp"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:paddingVertical="10dp"
                android:src="@drawable/ic_o"
                app:tint="@color/o_x_icon_color" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/game_mode"
        android:textColor="@color/o_x_icon_color"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mode_single_player"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:checkable="true"
            app:cardElevation="0dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:text="@string/single_player"
                android:textColor="@color/o_x_icon_color"
                android:textAllCaps="true" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mode_multi_player"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:cardElevation="0dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:textColor="@color/o_x_icon_color"
                android:text="@string/multiplayer"
                android:textAllCaps="true" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <TextView
        android:id="@+id/start_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/start_button_color"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/start"
        android:textAllCaps="true"
        android:textColor="@color/white" />

</LinearLayout>