<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.welcome.WelcomeFragment">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/welcome"
        android:textAllCaps="true"
        android:visibility="invisible"
        android:textColor="@color/title_color"
        android:textSize="45sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".15" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="7dp"
        android:background="@drawable/app_name_bg"
        android:fontFamily="@font/roboto"
        android:paddingHorizontal="10dp"
        android:text="@string/app_name"
        android:textColor="@color/app_name_color"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/welcome"
        app:layout_constraintStart_toStartOf="@+id/welcome"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <androidx.cardview.widget.CardView
        android:id="@+id/start_button"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/start_button_color"
        app:cardCornerRadius="35dp"
        app:cardElevation="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/exit_button"
        app:layout_constraintEnd_toEndOf="@+id/exit_button"
        app:layout_constraintStart_toStartOf="@+id/exit_button">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/start"
                android:textAllCaps="true"
                android:textColor="@color/welcome_screen_button_text_color"
                android:textSize="@dimen/dimen_30sp" />

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:background="@drawable/button_circle_bg">

                <ImageView
                    android:id="@+id/arrow_icon_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/arrow_icon"
                    android:paddingStart="7dp"
                    android:src="@drawable/ic_arrow"
                    tools:ignore="RtlSymmetry" />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/exit_button"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/exit_button_color"
        app:cardCornerRadius="35dp"
        android:visibility="invisible"
        android:layout_marginHorizontal="46dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".9">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/exit"
                android:textAllCaps="true"
                android:textColor="@color/welcome_screen_button_text_color"
                android:textSize="@dimen/dimen_30sp" />

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:background="@drawable/button_circle_bg">

                <ImageView
                    android:id="@+id/arrow_icon_exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/arrow_icon"
                    android:paddingStart="7dp"
                    android:src="@drawable/ic_arrow"
                    app:tint="@color/exit_button_color"
                    tools:ignore="RtlSymmetry" />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>